--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@supabase/supabase-js": "^2.39.2",
     "@tanstack/react-query": "^5.15.5",
     "@tanstack/react-query-devtools": "^5.17.0",
     "clsx": "^2.1.0",
