--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
-    "react-textarea-autosize": "^8.5.3"
+    "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.5.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
