--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"test": "vitest",
+		"test:run": "vitest run",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"mylint": "eslint .",
 		"preview": "vite preview",
@@ -38,7 +40,11 @@
 		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.2.0",
+		"@testing-library/react": "^14.1.2",
+		"@testing-library/user-event": "^14.5.2",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/jest": "^29.5.11",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@types/react-slick": "^0.23.13",
@@ -51,9 +57,14 @@
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jest-dom": "^5.1.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"eslint-plugin-testing-library": "^6.2.0",
+		"eslint-plugin-vitest": "^0.3.20",
+		"jsdom": "^23.2.0",
+		"msw": "^2.1.2",
 		"postcss": "^8.4.32",
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.10",
@@ -61,6 +72,7 @@
 		"tailwindcss": "^3.4.0",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8",
-		"vite-plugin-eslint": "^1.8.1"
+		"vite-plugin-eslint": "^1.8.1",
+		"vitest": "^1.2.1"
 	}
 }
