cicd workflow runs 오타 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        runs: npm install
+        run: npm install
 
       - name: Run the tests
         run: npm test
