--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,4 +39,18 @@ jobs:
           echo "_API_NAVER_BOOK_SEARCH_PW=${{ secrets._API_NAVER_BOOK_SEARCH_PW }}" >> .env
 
       - name: Run the tests
-        run: npm test
+        run: npm run test
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy to AWS S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'ap-northeast-2'
+          SOURCE_DIR: 'dist'
