--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,7 +26,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Cache dependencies
+        id: cache-deps
+        uses: actions/cache@v4
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Generate Environment Variables File
@@ -41,10 +51,10 @@ jobs:
       - name: Run the tests
         run: npm run test
 
-      - name: Build
+      - name: Run the Build
         run: npm run build
 
-      - name: Deploy to AWS S3
+      - name: Run the Deploy to AWS S3
         uses: jakejarvis/s3-sync-action@master
         with:
           args: --delete
