git husky 설치 및 적용(push 전 test 확인)

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,7 +46,7 @@ jobs:
           echo "VITE_SUPABASE_FUNCTIONS_NAVER_BOOK_SEARCH_URL=${{ secrets.VITE_SUPABASE_FUNCTIONS_NAVER_BOOK_SEARCH_URL }}" >> .env
 
       - name: Run the tests
-        run: npm run test
+        run: npm run test:run
 
       - name: Run the Build
         run: npm run build
