--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,6 +48,12 @@ jobs:
       - name: Run the tests
         run: npm run test:run
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        env:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: Withlaw/dnb
+
       - name: Run the Build
         run: npm run build
 
