--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -41,5 +41,6 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: Withlaw/dnb
