--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,12 +45,13 @@ jobs:
           echo "VITE_SUPABASE_API_KEY=${{ secrets.VITE_SUPABASE_API_KEY }}" >> .env
           echo "VITE_SUPABASE_FUNCTIONS_NAVER_BOOK_SEARCH_URL=${{ secrets.VITE_SUPABASE_FUNCTIONS_NAVER_BOOK_SEARCH_URL }}" >> .env
 
-      - name: Run the tests
-        run: npm run test:run
+      - name: Run the tests and code coverage
+        run: npm run test:run -- --coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: Withlaw/dnb
 
